--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,8 +28,6 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
-    - name: Set up Python path 🐍
-      run: echo "PYTHONPATH=src" >> $GITHUB_ENV  # Set PYTHONPATH to include src
     - name: Install dependencies 🔧
       run: |
         python -m pip install pip==24.0
@@ -39,12 +37,12 @@ jobs:
         python -m pip install codecov
         python -m pip install pytest-cov
         if [ -f test_requirements.txt ]; then pip install -r test_requirements.txt; fi
-        python -m pip install -e src  # install the package
+        python -m pip install -e .  # install the package
     - name: Run tests and collect coverage 🧪
       run: |
         # specify the directory to test (e.g., unit_tests) & directory to save the coverage report
         # this prevents running submodules' tests
-        pytest --cov=regime tests/regime -p no:warnings -v
+        pytest --cov=src tests -p no:warnings -v
     - name: Upload coverage to Codecov 📊
       uses: codecov/codecov-action@v4
       with:
