--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -29,7 +29,7 @@ jobs:
         python -m pip install wheel==0.42.0
         python -m pip install setuptools==69.1.0
         pip install pylint
-        if [ -f test_requirements.txt ]; then pip install -r test_requirements.txt; fi
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         python -m pip install -e .
     - name: Analysing the code with pylint 🕵️
       run: |
