--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,6 +36,7 @@ jobs:
         python -m pip install pytest
         python -m pip install codecov
         python -m pip install pytest-cov
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ -f test_requirements.txt ]; then pip install -r test_requirements.txt; fi
         python -m pip install -e .  # install the package
     - name: Run tests and collect coverage 🧪
